
2011-11-10 15:09 nick

	* major overhaul of build system to use GNU autotools

2008-01-07 15:02  hkmoffa

	* test_problems/Makefile.in: Added a missing test

2008-01-07 15:00  hkmoffa

	* Cantera/src/transport/TransportFactory.cpp: Eliminated a solaris
	  warning

2008-01-07 14:09  hkmoffa

	* test_problems/VCSnonideal/NaCl_equil/Makefile.in: Fixed an error
	  in the Makefile.in

2008-01-07 14:05  hkmoffa

	* Cantera/cxx/src/Makefile.in: Fixed an error in the Makefile.in

2008-01-07 13:53  hkmoffa

	* Cantera/src/equil/: ChemEquil.cpp, Makefile.in, equilibrate.cpp,
	  vcs_MultiPhaseEquil.cpp, vcs_TV.cpp, vcs_VolPhase.cpp,
	  vcs_nasa_poly.h, vcs_prob.cpp, vcs_report.cpp,
	  vcs_setMolesLinProg.cpp, vcs_solve.cpp, vcs_solve_TP.cpp,
	  vcs_species_thermo.cpp: Solaris 64 bit port modifications

2008-01-07 13:17  hkmoffa

	* test_problems/Makefile.in: Fixed a spelling error

2008-01-07 13:07  hkmoffa

	* tools/doc/doxyinput/: buildcygwin.txt, configuring.txt: Doxygen
	  update -> adding more related pages from the Cantera site

2008-01-07 08:17  hkmoffa

	* test_problems/ChemEquil_gri_matrix/Makefile.in: Updated Makefile
	  to new methodology

2008-01-07 08:10  hkmoffa

	* tools/doc/doxyinput/bindings.txt: Added bindings

2008-01-07 08:07  hkmoffa

	* test_problems/Makefile.in: Deleted a directory that hasn't been
	  checked in yet

2008-01-06 15:28  hkmoffa

	* tools/doc/doxyinput/: build.txt, numarray.txt: Added more
	  documentation from the Cantera site into the cvs dox version

2008-01-06 14:38  hkmoffa

	* Cantera/src/thermo/: HMWSoln.h, WaterProps.cpp, WaterProps.h:
	  Doxygen update to WaterProps

2008-01-06 12:15  hkmoffa

	* test_problems/python/README: updated the readme

2008-01-06 11:49  hkmoffa

	* configure, configure.in: Added a test dir

2008-01-06 11:48  hkmoffa

	* test_problems/Makefile.in: Added a test

2008-01-06 11:30  hkmoffa

	* test_problems/ChemEquil_red1/: Makefile.in, basopt_red1.cpp: Made