@@ -5,11 +5,12 @@
 SUBDIRS  = cathermo mixGasTransport ChemEquil_gri_matrix ChemEquil_gri_pairs
 SUBDIRS += ChemEquil_ionizedGas ChemEquil_red1 CpJump cxx_ex diamondSurf 
 SUBDIRS += diamondSurf_dupl fracCoeff multiGasTransport NASA9poly_test
-SUBDIRS += negATest printUtilUnitTest 
+SUBDIRS += negATest printUtilUnitTest pureFluidTest 
 
 # skipped:
 # ck2cti_test
 # nasa9_reader (uses ck2cti)
+# python
 
 EXTRA_DIST =
 
